// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AutoresizeTextarea > creates snapshot 1`] = `
<DocumentFragment>
  <textarea
    class="form-control _textarea_b5c6e5"
    id="test"
    name="test"
    rows="3"
    spellcheck="false"
    wrap="off"
  />
</DocumentFragment>
`;

exports[`AutoresizeTextarea creates snapshot 1`] = `
<DocumentFragment>
  <textarea
    class="form-control textarea"
    id="test"
    name="test"
    rows="3"
    spellcheck="false"
    wrap="off"
  />
</DocumentFragment>
`;
